@@ -3045,47 +3045,6 @@ Return nil if there's no useful source location."
   (goto-char (point-min))
   (slime-forward-source-path source-path))
 
-;;; The following two functions can be handy when inspecting
-;;; source-location while debugging `M-.'.
-;;;
-(defun slime-current-tlf-number ()
-  "Return the current toplevel number."
-  (interactive)
-  (let ((original-pos (car (slime-region-for-defun-at-point)))
-        (n 0))
-    (save-excursion
-      ;; We use this and no repeated `beginning-of-defun's to get
-      ;; reader conditionals right.
-      (goto-char (point-min))
-      (while (progn (slime-forward-sexp)
-                    (< (point) original-pos))
-        (incf n)))
-    n))
-
-;;; This is similiar to `slime-enclosing-form-paths' in the
-;;; `slime-parse' contrib except that this does not do any duck-tape
-;;; parsing, and gets reader conditionals right.
-(defun slime-current-form-path ()
-  "Returns the path from the beginning of the current toplevel
-form to the atom at point, or nil if we're in front of a tlf."
-  (interactive)
-  (let ((source-path nil))
-    (save-excursion
-      ;; Moving forward to get reader conditionals right.
-      (loop for inner-pos = (point)
-            for outer-pos = (nth-value 1 (slime-current-parser-state))
-            while outer-pos do
-            (goto-char outer-pos)
-            (unless (eq (char-before) ?#) ; when at #(...) continue.
-              (forward-char)
-              (let ((n 0))
-                (while (progn (slime-forward-sexp)
-                              (< (point) inner-pos))
-                  (incf n))
-                (push n source-path)
-                (goto-char outer-pos)))))
-    source-path))
-
 (defun slime-forward-positioned-source-path (source-path)
   "Move forward through a sourcepath from a fixed position.
 The point is assumed to already be at the outermost sexp, making the
